input and matrix done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <!-- <img src="map.jpg" alt=""> -->
-    
+    <canvas id="canvas" width="200" height="100" style="border:1px solid #000000;">
+    </canvas>
+    <br>
+    <button type="button" id="calculate">Calculate</button>
     <script src="input.js"></script>
 </body>
 </html>
