--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     <style>
         canvas {
         border: 1px solid black;
-        width: 100%;
-        height: 100%;
+
         }
     </style>
   </head>
   <body>
-    <h1>Hello world it is fun building projects</h1>
+    <h1>Travelling Salesman Problem</h1>
 
     <canvas
     id="canvas"
+    width="600"
+    height="400"
     > </canvas>
+    <div class="time-value">
+    <span>Time: </span>
+    </div>
+    <input type="range" name="time" id="time" min="1" max="1000">
+    <button id="start">Start</button>
     <script src="aco.js"></script>
   </body>
 </html>
