--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <canvas id="canvas" width="800" height="534"> </canvas>
     <hr />
-    <input type="number" name="ants" id="ants" />
+    <input type="number" name="ants" id="ants" min="1" max="1000" value="100" />
     <button id="start">Start</button>
     <button id="clear">Clear Canvas</button>
     <div class="time-value">
